{
    "name": "CarInputActions",
    "maps": [
        {
            "name": "CarControls",
            "id": "31d53b2c-d01f-4d78-91f1-3acc99cef70b",
            "actions": [
                {
                    "name": "Steer",
                    "type": "Value",
                    "id": "7083613c-c273-4d33-8a4f-881489e18e01",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Accelerate",
                    "type": "Value",
                    "id": "db56be58-88f8-4b47-a62f-c11ec5bdd577",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Brake",
                    "type": "Value",
                    "id": "ef7d3cdd-ec9a-43fa-8ad1-1208fbc3c3fd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Handbrake",
                    "type": "Button",
                    "id": "4cfbe126-ce77-4cd9-a0e0-41e2688bd034",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "fc0541f4-3ada-4bc0-a3f1-99e5123b0cc6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pitch",
                    "type": "Value",
                    "id": "0e7c71c5-9f83-4141-b627-e10a0e488cc1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "6d60419b-d6c2-4616-bb6e-432bc4a53a43",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleMenu",
                    "type": "Button",
                    "id": "9d594cb0-e909-4c3e-a921-bb3a70a19561",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aa05e4f6-9c51-4705-bb16-b5563d3599d5",
                    "path": "<OculusTouchController>{LeftHand}/thumbstick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95628b2e-2234-4c4b-96e4-68a44fa691ec",
                    "path": "<OculusTouchController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e1bed45-90a6-4882-8141-9ca41b99c91b",
                    "path": "<OculusTouchController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7c8a0de-29d5-418a-8ea8-be75af17f33d",
                    "path": "<OculusTouchController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Handbrake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c85442c2-ac9d-47c8-99b5-3175cef6b68b",
                    "path": "<XRController>{RightHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09fd9e34-f645-443d-85bb-29be40c4345d",
                    "path": "<OculusTouchController>{RightHand}/thumbstick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7480478-7676-42ed-b963-88bf610eb94c",
                    "path": "<OculusTouchController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69915637-6b7f-4c2a-bb37-254cb074cda8",
                    "path": "<OculusTouchController>{LeftHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}